@@ -1,3 +1,7 @@
+2004-10-03  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b217
+
+	* Fix: Missed a forgotton Popup.
+
 2004-10-03  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b216
 
 	* Fix: Reloaded Popups e.g. in Mambo were embedded.
